Updated rampart-core to use Log4j2 loggers
* added some logging lambda optimizations
* switched to Log4j2 LogMaanger.getLogger(...)
* fixed some deprecations, javadoc, API generics
* sync'd mix of tabs, 4-space indents and 2-space indents to only 2-space indents